src/App.css
.app {
  text-align: center;
}

.app-header {
  min-height: 40vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(20px + 2vmin);
}

.theme-toggle {
  min-height: 60vh;
}

.theme-night {
  background-color: #282c34;
  color: white;
}

.theme-day {
  background-color: #ffffff;
  color: black;
}

.switch {
  position: relative;
  display: inline-block;
  width: 70px;
  height: 34px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
  border-radius: 34px;
  font-size: 20px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
  border-radius: 50%;
  z-index: 1;
}

input:checked + .slider:before {
  -webkit-transform: translateX(36px);
  -ms-transform: translateX(36px);
  transform: translateX(36px);
}

img {
  width: 25px;
  height: 25px
}

.toggle-track-check {
  position: absolute;
  width: 17px;
  height: 17px;
  left: 5.5px;
  top: 0;
  bottom: 6px;
  margin-top: auto;
  margin-bottom: auto;
  line-height: 0;
}

.toggle-track-x {
  position: absolute;
  width: 17px;
  height: 17px;
  right: 12px;
  top: 0;
  bottom: 6px;
  margin-top: auto;
  margin-bottom: auto;
  line-height: 0;
}

